--- a/productlitst.html
+++ b/productlitst.html
@@ -77,12 +77,12 @@
                   <div class="col-md-3">
                     <ul class="usermenu">
                       <li>
-                        <a href="checkout.html" class="log">
+                        <a href="login.html" class="log">
                           Đăng nhập
                         </a>
                       </li>
                       <li>
-                        <a href="checkout2.html" class="reg">
+                        <a href="register.html" class="reg">
                           Đăng kí 
                         </a>
                       </li>
