--- a/checkout.html
+++ b/checkout.html
@@ -78,12 +78,12 @@
                   <div class="col-md-3">
                     <ul class="usermenu">
                       <li>
-                        <a href="checkout.html" class="log">
+                        <a href="login.html" class="log">
                           Đăng nhập
                         </a>
                       </li>
                       <li>
-                        <a href="checkout2.html" class="reg">
+                        <a href="register.html" class="reg">
                           Đăng kí
                         </a>
                       </li>
@@ -558,7 +558,7 @@
               <div class="checkout-page">
                 <ol class="checkout-steps">
                   <li class="steps active">
-                    <a href="checkout.html" class="step-title">
+                    <a href="login.html" class="step-title">
                       01. Thông tin đăng nhập 
                     </a>
                     <div class="step-description">
@@ -609,7 +609,7 @@
                               </div>
                               <div class="form-row">
                                 <label class="lebel-abs">
-                                  Password 
+                                  Mật khẩu 
                                   <strong class="red">
                                     *
                                   </strong>
@@ -618,7 +618,7 @@
                               </div>
                               <p class="forgoten">
                                 <a href="#">
-                                  Quên mật khẩu
+                                  Quên mật khẩu?
                                 </a>
                               </p>
                               <button>
