--- a/checkout2.html
+++ b/checkout2.html
@@ -77,12 +77,12 @@
                   <div class="col-md-3">
                     <ul class="usermenu">
                       <li>
-                        <a href="checkout.html" class="log">
+                        <a href="login.html" class="log">
                           Đăng nhập
                         </a>
                       </li>
                       <li>
-                        <a href="checkout2.html" class="reg">
+                        <a href="register.html" class="reg">
                           Đăng kí
                         </a>
                       </li>
@@ -97,7 +97,7 @@
                   <li id="search" class="search">
                     <form>
                       <input class="search-submit" type="submit" value="">
-                      <input class="search-input" placeholder="Enter your search term..." type="text" value="" name="search">
+                      <input class="search-input" placeholder="Nhập từ khóa tìm kiếm..." type="text" value="" name="search">
                     </form>
                   </li>
                   <li class="option-cart">
