--- a/contact.html
+++ b/contact.html
@@ -125,13 +125,13 @@
                   <div class="col-md-3">
                     <ul class="usermenu">
                       <li>
-                        <a href="checkout.html" class="log">
-                          Login
+                        <a href="login.html" class="log">
+                          Đăng nhập
                         </a>
                       </li>
                       <li>
-                        <a href="checkout2.html" class="reg">
-                          Register
+                        <a href="register.html" class="reg">
+                          Đăng kí
                         </a>
                       </li>
                     </ul>
