--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                            </div>
                            <div class="col-md-3">
                               <ul class="usermenu">
-                                 <li><a href="checkout.html" class="log">Đăng nhập</a></li>
-                                 <li><a href="checkout2.html" class="reg">Đăng kí</a></li>
+                                 <li><a href="login.html" class="log">Đăng nhập</a></li>
+                                 <li><a href="register.html" class="reg">Đăng kí</a></li>
                               </ul>
                            </div>
                         </div>
