git commit -m "change some file"

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                            </div>
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-02.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details2.html"><img src="images/products/small/products-04.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
@@ -222,7 +222,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="offer">New</div>
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-03.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details3.html"><img src="images/products/small/products-02.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
@@ -230,7 +230,7 @@
                            </div>
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-04.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details4.html"><img src="images/products/small/products-03.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
@@ -243,7 +243,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="offer">- %20</div>
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-01.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details5.html"><img src="images/products/small/products-05.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
@@ -251,7 +251,7 @@
                            </div>
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-02.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details6.html"><img src="images/products/small/products-06.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
@@ -260,7 +260,7 @@
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
                                  <div class="offer">New</div>
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-03.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details7.html"><img src="images/products/small/products-07.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
@@ -268,7 +268,7 @@
                            </div>
                            <div class="col-md-3 col-sm-6">
                               <div class="products">
-                                 <div class="thumbnail"><a href="details.html"><img src="images/products/small/products-04.png" alt="Product Name"></a></div>
+                                 <div class="thumbnail"><a href="details8.html"><img src="images/products/small/products-08.png" alt="Product Name"></a></div>
                                  <div class="productname">Sản phẩm 2021</div>
                                  <h4 class="price">450.000 VNĐ</h4>
                                  <div class="button_group"><button class="button add-cart" type="button">Thêm vào giỏ</button><button class="button compare" type="button"><i class="fa fa-exchange"></i></button><button class="button wishlist" type="button"><i class="fa fa-heart-o"></i></button></div>
