--- a/login.html
+++ b/login.html
@@ -433,52 +433,48 @@
                         </div>
                         <div class="product-tag leftbar">
                             <h3 class="title">
-                                Products
+                                Nhãn hàng 
                                 <strong>
-                                    Tags
+                                    khác
                                 </strong>
                             </h3>
                             <ul>
                                 <li>
                                     <a href="#">
-                                        Lincoln us
+                                        Colgate
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        SDress for Girl
+                                        PS
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        Corner
+                                        Kotex
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        Window
+                                        Vinamilk
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        PG
+                                        Durex
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        Oscar
+                                        Okamoto
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        Bath room
+                                        TTH-TrueMilk
                                     </a>
                                 </li>
-                                <li>
-                                    <a href="#">
-                                        PSD
-                                    </a>
-                                </li>
+                                
                             </ul>
                         </div>
                         <div class="fbl-box leftbar">
