git commit -m "change some file"

--- a/details.html
+++ b/details.html
@@ -431,9 +431,9 @@
                     </a>
                   </p>
                   <p>
-                    Availability: 
+                    Tình trạng: 
                     <span class=" light-red">
-                      In Stock
+                      Còn hàng 
                     </span>
                   </p>
                   <p>
@@ -441,7 +441,7 @@
                   </p>
                   <hr class="border">
                   <div class="price">
-                    Price : 
+                    Giá : 
                     <span class="new_price">
                       415.000
                       <sup>
@@ -457,8 +457,8 @@
                   </div>
                   <hr class="border">
                   <div class="wided">
-                    <div class="qty">
-                      Qty &nbsp;&nbsp;: 
+                    <div class="Sô lượng">
+                      Sô lượng &nbsp;&nbsp;: 
                       <select>
                         <option>
                           1
