--- a/details3.html
+++ b/details3.html
@@ -115,7 +115,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -146,7 +146,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -380,7 +380,7 @@
               <div class="products-details">
                 <div class="preview_image">
                   <div class="preview-small">
-                    <img id="zoom_03" src="images/products/medium/products-01.jpg" data-zoom-image="images/products/Large/products-01.jpg" alt="">
+                    <img id="zoom_03" src="images/products/medium/products-03.png" data-zoom-image="images/products/Large/products-02.png" alt="">
                   </div>
                   <div class="thum-image">
                     <ul id="gallery_01" class="prev-thum">
@@ -422,7 +422,7 @@
                 </div>
                 <div class="products-description">
                   <h5 class="name">
-                    Oyster Plus ++ 
+                    PrNivea Extra White SPF30 (350ml)
                   </h5>
                   <p>
                     <img alt="" src="images/star.png">
@@ -431,25 +431,24 @@
                     </a>
                   </p>
                   <p>
-                    Availability: 
+                    Tình trạng: 
                     <span class=" light-red">
-                      In Stock
+                      Còn hàng
                     </span>
                   </p>
                   <p>
-                    Thực phẩm bảo vệ sức khỏe Oyster Plus – Goodhealth hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới, giúp cánh đàn ông có sức khỏe cường tráng và luôn phong độ, bản lĩnh.
-                  </p>
+                    Sữa dưỡng thể dưỡng trắng giúp phục hồi & chống nắng Nivea Extra White SPF30 với công thức được tăng cường chỉ số chống nắng SPF30 giúp bảo vệ làn da khỏi tác hại của ánh nắng mặt trời, ngăn ngừa tình trạng đen sạm da. Đặc biệt, thành phần sữa dưỡng thể chứa chiết xuất từ quả Camu Camu, có hàm lượng Vitamin C gấp 50 lần so với quả chanh, góp phần phục hồi và dưỡng trắng da từ sâu bên trong.                  </p>
                   <hr class="border">
                   <div class="price">
-                    Price : 
+                    Giá : 
                     <span class="new_price">
-                      415.000
+                      135.000
                       <sup>
                         VNĐ
                       </sup>
                     </span>
                     <span class="old_price">
-                      450.000
+                      150.000
                       <sup>
                         VNĐ
                       </sup>
@@ -457,8 +456,8 @@
                   </div>
                   <hr class="border">
                   <div class="wided">
-                    <div class="qty">
-                      Qty &nbsp;&nbsp;: 
+                    <div class="Số lượng">
+                      Số lượng &nbsp;&nbsp;: 
                       <select>
                         <option>
                           1
@@ -514,11 +513,17 @@
                 <div class="tab-content-wrap">
                   <div class="tab-content" id="Descraption">
                     <p>
-                      Đối tượng sử dụng: Người lớn là nam giới.Thành phần: Bột chiết xuất từ hàu biển 350mg, kẽm oxide 8.8mg Công dụng: Hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới. Hướng dẫn sử dụng: Uống từ 1-2 viên/ngày hoặc theo hướng dẫn của chuyên gia y tế. Có thể tách viên và thêm vào thức ăn khác. Bảo quản: Nơi khô ráo, dưới 30 độ C. Quy cách đóng gói: Chai 60 viên
-                    </p>
+                      Thành phần: Aqua, Octocrylene, Glycerin, Cyclomethicone, Glycyrrhiza Glabra Root Extract,…
+
+                      Công dụng: 
+                      Bảo vệ da hiệu quả khỏi tác hại của ánh nắng mặt trời, ngăn ngừa tình trạng đen sạm da.
+                      Phục hồi và nuôi dưỡng làn da trắng sáng từ sâu bên trong.                        
                     <p>
-                      Xuất xứ thương hiệu: New Zealand. Sản xuất tại: New Zealand. Sản phẩm này không phải là thuốc và không có tác dụng thay thể thuốc chữa bệnh. Để xa tầm tay trẻ em. Đọc kỹ hướng dẫn sử dụng trước khi dùng. *Pharmacity cam kết chỉ bán sản phẩm còn dài hạn sử dụng.
-                    </p>
+                      Hướng dẫn sử dụng: Thoa và mát-xa sản phẩm toàn thân.
+
+                      Bảo quản: Nơi khô ráo thoáng mát, tránh ánh nắng trực tiếp.
+                      
+                      Dung tích: 350ml                    </p>
                   </div>
                   <div class="tab-content" id="Reviews">
                     <form>
@@ -568,7 +573,7 @@
                           </tr>
                           <tr>
                             <td>
-                              Price
+                              Giá
                             </td>
                             <td>
                               <input type="radio" name="price" value="">
@@ -739,7 +744,7 @@
                             - %20
                           </div>
                           <div class="thumbnail">
-                            <img src="images/products/small/products-01.png" alt="Product Name">
+                            <img src="images/products/small/products-04.png" alt="Product Name">
                           </div>
                           <div class="productname">
                             Sản phẩm 2021
