--- a/details4.html
+++ b/details4.html
@@ -115,7 +115,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -146,7 +146,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -380,7 +380,7 @@
               <div class="products-details">
                 <div class="preview_image">
                   <div class="preview-small">
-                    <img id="zoom_03" src="images/products/medium/products-01.jpg" data-zoom-image="images/products/Large/products-01.jpg" alt="">
+                    <img id="zoom_03" src="images/products/medium/products-04.png" data-zoom-image="images/products/Large/products-02.png" alt="">
                   </div>
                   <div class="thum-image">
                     <ul id="gallery_01" class="prev-thum">
@@ -422,7 +422,7 @@
                 </div>
                 <div class="products-description">
                   <h5 class="name">
-                    Oyster Plus ++ 
+                    Wellness Nutrition (Hộp 90 viên)
                   </h5>
                   <p>
                     <img alt="" src="images/star.png">
@@ -431,25 +431,23 @@
                     </a>
                   </p>
                   <p>
-                    Availability: 
+                    Tình trạng: 
                     <span class=" light-red">
-                      In Stock
+                      Còn hàng
                     </span>
                   </p>
                   <p>
-                    Thực phẩm bảo vệ sức khỏe Oyster Plus – Goodhealth hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới, giúp cánh đàn ông có sức khỏe cường tráng và luôn phong độ, bản lĩnh.
-                  </p>
-                  <hr class="border">
+                    Viên đông trùng hạ thảo Wellness Nutrition được sản xuất và đóng gói tại Mỹ với dây chuyền sản xuất khép kín theo công nghệ chiết xuất cao cấp mới đảm bảo giữ được 100% hoạt tính Đông Trùng Hạ Thảo Sinensis (loài có công hiệu tốt nhất của Đông Trùng Hạ Thảo).                  <hr class="border">
                   <div class="price">
-                    Price : 
+                    Giá : 
                     <span class="new_price">
-                      415.000
+                      250.000
                       <sup>
                         VNĐ
                       </sup>
                     </span>
                     <span class="old_price">
-                      450.000
+                      275.000
                       <sup>
                         VNĐ
                       </sup>
@@ -457,8 +455,8 @@
                   </div>
                   <hr class="border">
                   <div class="wided">
-                    <div class="qty">
-                      Qty &nbsp;&nbsp;: 
+                    <div class="Số lượng">
+                      Số lượng &nbsp;&nbsp;: 
                       <select>
                         <option>
                           1
@@ -514,11 +512,24 @@
                 <div class="tab-content-wrap">
                   <div class="tab-content" id="Descraption">
                     <p>
-                      Đối tượng sử dụng: Người lớn là nam giới.Thành phần: Bột chiết xuất từ hàu biển 350mg, kẽm oxide 8.8mg Công dụng: Hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới. Hướng dẫn sử dụng: Uống từ 1-2 viên/ngày hoặc theo hướng dẫn của chuyên gia y tế. Có thể tách viên và thêm vào thức ăn khác. Bảo quản: Nơi khô ráo, dưới 30 độ C. Quy cách đóng gói: Chai 60 viên
-                    </p>
+                      Công dụng
+                        Bồi bổ sức khỏe, tăng cường miễn dịch, cải thiện chức năng gan, giúp ăn ngon ngủ khỏe.
+                        Tăng cường sinh lực và khả năng tình dục.
+                        Đông trùng hạ thảo có tác dụng an thần đối với hệ thần kinh, giúp giảm bớt những lo lắng, căng thẳng đem lại giấc ngủ êm ái.
+                        Chống viêm nhiễm, bảo vệ phổi, hỗ trợ điều trị bệnh viêm đường hô hấp. Điều hoà hoạt động tim mạch, làm giảm và ngăn ngừa các bệnh lý tim mạch.
+                        Trẻ hóa tế bào, kéo dài tuổi thọ.
+                        Bổ thận, giúp nâng cao chức năng sinh lý nam giới.
+                        Làm chậm quá trình lão hóa, làm đẹp da, duy trì vẻ đẹp thanh xuân.
+                        Hỗ trợ tăng miễn dịch, ngừa được các bệnh về đường hô hấp và cả bệnh ung thư.                       
                     <p>
-                      Xuất xứ thương hiệu: New Zealand. Sản xuất tại: New Zealand. Sản phẩm này không phải là thuốc và không có tác dụng thay thể thuốc chữa bệnh. Để xa tầm tay trẻ em. Đọc kỹ hướng dẫn sử dụng trước khi dùng. *Pharmacity cam kết chỉ bán sản phẩm còn dài hạn sử dụng.
-                    </p>
+                      Thành phần
+                      Trong mỗi viên nang chứa 100% chiết xuất nguyên chất đông trùng hạ thảo Sinensis: 525mg.
+
+                      Đối tượng sử dụng
+                      Người cơ thể suy nhược, hệ miễn dịch suy giảm, sức đề kháng kém.
+                      Người mới ốm dậy, người thường xuyên tiếp xúc hóa chất, môi trường độc hại gây suy kiệt, mệt mỏi.
+                      Người suy giảm chức năng gan, thận, phổi.
+                      Người thi đấu thể thao.         </p>
                   </div>
                   <div class="tab-content" id="Reviews">
                     <form>
@@ -568,7 +579,7 @@
                           </tr>
                           <tr>
                             <td>
-                              Price
+                              Giá
                             </td>
                             <td>
                               <input type="radio" name="price" value="">
@@ -739,7 +750,7 @@
                             - %20
                           </div>
                           <div class="thumbnail">
-                            <img src="images/products/small/products-01.png" alt="Product Name">
+                            <img src="images/products/small/products-04.png" alt="Product Name">
                           </div>
                           <div class="productname">
                             Sản phẩm 2021
