--- a/details5.html
+++ b/details5.html
@@ -115,7 +115,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -146,7 +146,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -380,7 +380,7 @@
               <div class="products-details">
                 <div class="preview_image">
                   <div class="preview-small">
-                    <img id="zoom_03" src="images/products/medium/products-01.jpg" data-zoom-image="images/products/Large/products-01.jpg" alt="">
+                    <img id="zoom_03" src="images/products/medium/products-05.png" data-zoom-image="images/products/Large/products-02.png" alt="">
                   </div>
                   <div class="thum-image">
                     <ul id="gallery_01" class="prev-thum">
@@ -422,7 +422,7 @@
                 </div>
                 <div class="products-description">
                   <h5 class="name">
-                    Oyster Plus ++ 
+                    Head & Shoulders (800ml)
                   </h5>
                   <p>
                     <img alt="" src="images/star.png">
@@ -431,25 +431,22 @@
                     </a>
                   </p>
                   <p>
-                    Availability: 
+                    Tình trạng: 
                     <span class=" light-red">
-                      In Stock
+                      Còn hàng
                     </span>
                   </p>
                   <p>
-                    Thực phẩm bảo vệ sức khỏe Oyster Plus – Goodhealth hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới, giúp cánh đàn ông có sức khỏe cường tráng và luôn phong độ, bản lĩnh.
-                  </p>
-                  <hr class="border">
-                  <div class="price">
-                    Price : 
+                    Dầu gội sạch gàu siêu mát lạnh Head & Shoulders với công thức đặc biệt, mang đến cảm giác mát lạnh với -5°C, cho da đầu sạch gàu, hết ngứa.                  <div class="price">
+                    Giá : 
                     <span class="new_price">
-                      415.000
+                      100.000
                       <sup>
                         VNĐ
                       </sup>
                     </span>
                     <span class="old_price">
-                      450.000
+                      105.000
                       <sup>
                         VNĐ
                       </sup>
@@ -457,8 +454,8 @@
                   </div>
                   <hr class="border">
                   <div class="wided">
-                    <div class="qty">
-                      Qty &nbsp;&nbsp;: 
+                    <div class="Số lượng">
+                      Số lượng &nbsp;&nbsp;: 
                       <select>
                         <option>
                           1
@@ -514,11 +511,20 @@
                 <div class="tab-content-wrap">
                   <div class="tab-content" id="Descraption">
                     <p>
-                      Đối tượng sử dụng: Người lớn là nam giới.Thành phần: Bột chiết xuất từ hàu biển 350mg, kẽm oxide 8.8mg Công dụng: Hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới. Hướng dẫn sử dụng: Uống từ 1-2 viên/ngày hoặc theo hướng dẫn của chuyên gia y tế. Có thể tách viên và thêm vào thức ăn khác. Bảo quản: Nơi khô ráo, dưới 30 độ C. Quy cách đóng gói: Chai 60 viên
-                    </p>
+                      Thành phần
+                        Water, Sodium Laureth Sulfate, Dimethicone, Zinc Carbonate…
+
+                        Công dụng
+                        Siêu mát lạnh cho da đầu sạch gàu.                       
                     <p>
-                      Xuất xứ thương hiệu: New Zealand. Sản xuất tại: New Zealand. Sản phẩm này không phải là thuốc và không có tác dụng thay thể thuốc chữa bệnh. Để xa tầm tay trẻ em. Đọc kỹ hướng dẫn sử dụng trước khi dùng. *Pharmacity cam kết chỉ bán sản phẩm còn dài hạn sử dụng.
-                    </p>
+                      Hướng dẫn sử dụng
+                          Lắc trước khi sử dụng. Làm ướt tóc, xoa dầu gội nhẹ nhàng lên da đầu và tóc, sau đó xả sạch bằng nước. Gội thêm lần nữa nếu muốn.
+                          Lưu ý: Để xa tầm tay trẻ em. Tránh để sản phẩm dính vào mắt. Nếu dính vào mắt hãy rửa sạch với nước.
+
+                          Bảo quản: Nhiệt độ phòng và tránh ánh nắng trực tiếp.
+
+                          Quy cách đóng gói: Chai 800ml       
+                        </p>
                   </div>
                   <div class="tab-content" id="Reviews">
                     <form>
@@ -568,7 +574,7 @@
                           </tr>
                           <tr>
                             <td>
-                              Price
+                              Giá
                             </td>
                             <td>
                               <input type="radio" name="price" value="">
@@ -739,7 +745,7 @@
                             - %20
                           </div>
                           <div class="thumbnail">
-                            <img src="images/products/small/products-01.png" alt="Product Name">
+                            <img src="images/products/small/products-04.png" alt="Product Name">
                           </div>
                           <div class="productname">
                             Sản phẩm 2021
