--- a/details7.html
+++ b/details7.html
@@ -115,7 +115,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -146,7 +146,7 @@
                           </div>
                           <div class="item-description">
                             <p class="name">
-                              Lincoln chair
+                              Sản phẩm 2021
                             </p>
                             <p>
                               Size: 
@@ -380,7 +380,7 @@
               <div class="products-details">
                 <div class="preview_image">
                   <div class="preview-small">
-                    <img id="zoom_03" src="images/products/medium/products-01.jpg" data-zoom-image="images/products/Large/products-01.jpg" alt="">
+                    <img id="zoom_03" src="images/products/medium/products-07.png" data-zoom-image="images/products/Large/products-02.png" alt="">
                   </div>
                   <div class="thum-image">
                     <ul id="gallery_01" class="prev-thum">
@@ -422,7 +422,8 @@
                 </div>
                 <div class="products-description">
                   <h5 class="name">
-                    Oyster Plus ++ 
+                    Viên nghệ Procumin-E (Hộp 3 vỉ x 10 viên)
+
                   </h5>
                   <p>
                     <img alt="" src="images/star.png">
@@ -431,25 +432,23 @@
                     </a>
                   </p>
                   <p>
-                    Availability: 
+                    Tình trạng: 
                     <span class=" light-red">
-                      In Stock
+                      Còn hàng
                     </span>
                   </p>
                   <p>
-                    Thực phẩm bảo vệ sức khỏe Oyster Plus – Goodhealth hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới, giúp cánh đàn ông có sức khỏe cường tráng và luôn phong độ, bản lĩnh.
-                  </p>
-                  <hr class="border">
-                  <div class="price">
-                    Price : 
+                    Viên nghệ Procumin-E có thành phần nano curcumin hỗ trợ chống oxy hóa, bảo vệ niêm mạc dạ dày, tá tràng, hỗ trợ bảo vệ gan, giảm nguy cơ mắc bệnh về u bướu do các gốc tự do gây ra.               
+                    <div class="price">
+                    Giá : 
                     <span class="new_price">
-                      415.000
+                      100.000
                       <sup>
                         VNĐ
                       </sup>
                     </span>
                     <span class="old_price">
-                      450.000
+                      105.000
                       <sup>
                         VNĐ
                       </sup>
@@ -457,8 +456,8 @@
                   </div>
                   <hr class="border">
                   <div class="wided">
-                    <div class="qty">
-                      Qty &nbsp;&nbsp;: 
+                    <div class="Số lượng">
+                      Số lượng &nbsp;&nbsp;: 
                       <select>
                         <option>
                           1
@@ -514,11 +513,24 @@
                 <div class="tab-content-wrap">
                   <div class="tab-content" id="Descraption">
                     <p>
-                      Đối tượng sử dụng: Người lớn là nam giới.Thành phần: Bột chiết xuất từ hàu biển 350mg, kẽm oxide 8.8mg Công dụng: Hỗ trợ tăng cường sinh lực, miễn dịch cho nam giới. Hướng dẫn sử dụng: Uống từ 1-2 viên/ngày hoặc theo hướng dẫn của chuyên gia y tế. Có thể tách viên và thêm vào thức ăn khác. Bảo quản: Nơi khô ráo, dưới 30 độ C. Quy cách đóng gói: Chai 60 viên
-                    </p>
+                      Đối tượng sử dụng
+                              Người bị viêm loét dạ dày, hành tá tràng.
+                              Người đang trong quá trình làm lành vết thương, phục hồi sau mổ.
+                              Người đang và sau quá trình hóa trị hoặc xạ trị.
+                              Phụ nữ sau khi sinh.
+
+                              Thành phần
+                              Nano curcumin, Piperine, Polyethylene glycol vừa đủ 1 viên.                      
                     <p>
-                      Xuất xứ thương hiệu: New Zealand. Sản xuất tại: New Zealand. Sản phẩm này không phải là thuốc và không có tác dụng thay thể thuốc chữa bệnh. Để xa tầm tay trẻ em. Đọc kỹ hướng dẫn sử dụng trước khi dùng. *Pharmacity cam kết chỉ bán sản phẩm còn dài hạn sử dụng.
-                    </p>
+                      Công dụng
+                        Hỗ trợ chống oxy hóa, bảo vệ niêm mạc dạ dày, tá tràng, hỗ trợ bảo vệ gan, giảm nguy cơ mắc bệnh về u bướu do các gốc tự do gây ra.
+
+                        Hướng dẫn sử dụng
+                        Uống trước khi ăn 30 phút hoặc sau khi ăn 1 tiếng.
+                        Uống 1-2 viên/lần, ngày uống 2 lần.
+
+                        Bảo quản: Để nơi khô mát, tránh ánh sáng mặt trời và xa tầm tay trẻ em.     
+                        </p>
                   </div>
                   <div class="tab-content" id="Reviews">
                     <form>
@@ -568,7 +580,7 @@
                           </tr>
                           <tr>
                             <td>
-                              Price
+                              Giá
                             </td>
                             <td>
                               <input type="radio" name="price" value="">
@@ -739,7 +751,7 @@
                             - %20
                           </div>
                           <div class="thumbnail">
-                            <img src="images/products/small/products-01.png" alt="Product Name">
+                            <img src="images/products/small/products-04.png" alt="Product Name">
                           </div>
                           <div class="productname">
                             Sản phẩm 2021
@@ -1413,4 +1425,4 @@
     <script type="text/javascript" src="js/script.min.js" >
     </script>
   </body>
-</html>
+</html>  
